--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.10.1",
     "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-pdf/font": "^4.0.2",
     "@react-pdf/renderer": "^4.3.0",
     "@reduxjs/toolkit": "^2.8.2",
@@ -21,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "currency-symbol-map": "^5.1.0",
+    "date-fns": "^4.1.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
@@ -32,7 +35,8 @@
     "react-pdf": "^9.2.1",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^3.0.2",
-    "tailwind-merge": "^3.3.0",
+    "swr": "^2.3.3",
+    "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
     "zod": "^3.25.61"
   },
@@ -46,6 +50,7 @@
     "postcss": "^8.5.4",
     "prisma": "^6.10.1",
     "tailwindcss": "^4.1.8",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
 }
